--- a/storage/framework/laravel-excel/laravel-excel-23zxKSA6WbB5y9bzo6RBa7c5YuZfJocj.html
+++ b/storage/framework/laravel-excel/laravel-excel-23zxKSA6WbB5y9bzo6RBa7c5YuZfJocj.html
@@ -11,7 +11,7 @@
 
     <title>Dashboard</title>
     <!-- Custom fonts for this template-->
-    <link href="{{asset('vendor/fontawesome-free/css/all.min.css')}}" rel="stylesheet" type="text/css">
+    <link href="http://127.0.0.1:8000/vendor/fontawesome-free/css/all.min.css" rel="stylesheet" type="text/css">
     <link
         href="https://fonts.googleapis.com/css?family=Nunito:200,200i,300,300i,400,400i,600,600i,700,700i,800,800i,900,900i"
         rel="stylesheet">
@@ -19,10 +19,9 @@
           integrity="sha384-AYmEC3Yw5cVb3ZcuHtOA93w35dYTsvhLPVnYs9eStHfGJvOvKxVfELGroGkvsg+p" crossorigin="anonymous"/>
 
     <!-- Custom styles for this template-->
-    <link href="{{asset('css/sb-admin-2.min.css')}}" rel="stylesheet">
+    <link href="http://127.0.0.1:8000/css/sb-admin-2.min.css" rel="stylesheet">
     <title>Toastr.js</title>
-    @toastr_css
-
+    <link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/toastr.js/2.1.4/toastr.min.css">
 </head>
 
 <body id="page-top">
@@ -57,8 +56,8 @@
             </a>
             <div id="collapseTwo" class="collapse" aria-labelledby="headingTwo" data-parent="#accordionSidebar">
                 <div class="bg-white py-2 collapse-inner rounded">
-                    <a class="collapse-item" href="{{route('products.index')}}">Danh sách sản phẩm </a>
-                    <a class="collapse-item" href="{{route('products.create')}}">Thêm mới sản phẩm </a>
+                    <a class="collapse-item" href="http://127.0.0.1:8000/products">Danh sách sản phẩm </a>
+                    <a class="collapse-item" href="http://127.0.0.1:8000/products/create">Thêm mới sản phẩm </a>
                 </div>
             </div>
         </li>
@@ -68,13 +67,12 @@
             <a class="nav-link collapsed" href="#" data-toggle="collapse" data-target="#collapseUtilities"
                aria-expanded="true" aria-controls="collapseUtilities">
                 <i class="fas fa-fw fa-list"></i>
-                <span>Thao tác </span>
+                <span>Hóa đơn</span>
             </a>
             <div id="collapseUtilities" class="collapse" aria-labelledby="headingUtilities"
                  data-parent="#accordionSidebar">
                 <div class="bg-white py-2 collapse-inner rounded">
-                    <a class="collapse-item" href="{{route('bills.index')}}">Danh sách hóa đơn</a>
-                    <a class="collapse-item" href="{{route('customers.index')}}">Danh sách khách hàng </a>
+                    <a class="collapse-item" href="http://127.0.0.1:8000/bills">Danh sách hóa đơn</a>
                 </div>
             </div>
         </li>
@@ -91,9 +89,8 @@
                     <i class="fa fa-bars"></i>
                 </button>
                 <form class="d-none d-sm-inline-block form-inline mr-auto ml-md-3 my-2 my-md-0 mw-100 navbar-search"
-                      method="get" action="{{route('products.searchProduct')}}">
-                    @csrf
-                    <div class="input-group">
+                      method="get" action="http://127.0.0.1:8000/products/search-product">
+                    <input type="hidden" name="_token" value="ET3stSgvdMNV169hqGfS58J6kdDX2SZyeuZB4XXG">                    <div class="input-group">
                         <input type="text" class="form-control bg-light border-0 small" placeholder="Tìm kiếm sản phẩm"
                                aria-label="Search" aria-describedby="basic-addon2" name="searchProduct" onchange="this.form.submit()">
                         <div class="input-group-append">
@@ -135,19 +132,18 @@
                         <div class="nav-item dropdown float-right">
                             <a id="navbarDropdown" class="nav-link dropdown-toggle text-black-50" href="#" role="button"
                                data-toggle="dropdown" aria-haspopup="true" aria-expanded="false" v-pre>
-                                {{ Auth::user()->name }} <span class="caret"></span>
+                                thangbm <span class="caret"></span>
                             </a>
                             <div class="dropdown-menu dropdown-menu-right" aria-labelledby="navbarDropdown">
-                                <a class="dropdown-item" href="{{ route('logout') }}"
+                                <a class="dropdown-item" href="http://127.0.0.1:8000/logout"
                                    onclick="event.preventDefault();
                                                      document.getElementById('logout-form').submit();">
-                                    {{ __('Logout') }}
+                                    Logout
                                 </a>
 
-                                <form id="logout-form" action="{{ route('logout') }}" method="POST"
+                                <form id="logout-form" action="http://127.0.0.1:8000/logout" method="POST"
                                       style="display: none;">
-                                    @csrf
-                                </form>
+                                    <input type="hidden" name="_token" value="ET3stSgvdMNV169hqGfS58J6kdDX2SZyeuZB4XXG">                                </form>
                             </div>
                         </div>
                     </li>
@@ -159,7 +155,98 @@
 
             <!-- Begin Page Content -->
             <div class="container-fluid">
-                @yield('content')
+                    <div class="card">
+        <div class="card-header">
+            <ol class="breadcrumb mb-1 mt-1">
+                <li class="breadcrumb-item active">
+                    <a href="http://127.0.0.1:8000/products">Home</a>
+                </li>
+                <li class="breadcrumb-item active">Danh sách sản phẩm</li>
+            </ol>
+        </div>
+        <form action="http://127.0.0.1:8000/products/filter" method="get">
+            <input type="hidden" name="_token" value="ET3stSgvdMNV169hqGfS58J6kdDX2SZyeuZB4XXG">            <div class="col-12 col-md-12 pt-3">
+                <div class="row">
+                    <div class="col-12 col-md-2 ml-2">
+                        <select name="category" class="form-control" onchange="this.form.submit()">
+                            <option value="">Bộ lọc</option>
+                                                            <option value="1">Máy lạnh</option>
+                                                            <option value="2">Máy giặt</option>
+                                                            <option value="3">Điện gia dụng</option>
+                                                            <option value="4">Đồ dùng gia đình</option>
+                                                            <option value="5">Điện thoại </option>
+                                                            <option value="6">Laptop </option>
+                                                            <option value="7">Tivi </option>
+                                                    </select>
+                    </div>
+                </div>
+            </div>
+        </form>
+        <div class="card-body">
+            <table class="table table-striped">
+                <thead class="table-dark">
+                <tr>
+                    <th scope="col">#</th>
+                    <th scope="col">Tên sản phẩm</th>
+                    <th scope="col">Giá tiền</th>
+                    <th scope="col">Mô tả</th>
+                    <th scope="col">Số lượng</th>
+                    <th scope="col">Hình ảnh</th>
+                    <th scope="col"></th>
+                    <th scope="col"></th>
+                </tr>
+                </thead>
+                <tbody>
+                                                            <tr>
+                            <th>1</th>
+                            <td>Điện thoại Samsung Galaxy Note 20</td>
+                            <td>21,990,000</td>
+                            <td><p>Th&aacute;ng 8/2020,&nbsp;<a href="https://www.thegioididong.com/dtdd/samsung-galaxy-note-20" target="_blank">Samsung Galaxy Note 20</a>&nbsp;ch&iacute;nh thức được l&ecirc;n kệ, với thiết kế camera trước nốt ruồi quen thuộc, cụm camera h&igrave;nh chữ nhật mới lạ c&ugrave;ng với việc sử dụng vi ......</td>
+                            <td>4</td>
+                            <td>
+                                <img src="http://127.0.0.1:8000/storage/images/66PEiXNrD9NvlbDXvj2Ozbo8fq7cNs4ew49Um4xZ.png" style="width: 150px;height: 120px">
+                            </td>
+                            <td>
+                                <a class="btn btn-primary" href="http://127.0.0.1:8000/products/edit/1"><i
+                                        class="fas fa-edit"></i></a>
+                            </td>
+                            <td>
+                                <a class="btn btn-danger" href=""><i class="fas fa-trash"></i> </a>
+                            </td>
+                        </tr>
+                                            <tr>
+                            <th>2</th>
+                            <td>Điện Thoại OPPO Reno 2F</td>
+                            <td>5,990,000</td>
+                            <td><ul>
+	<li>Ch&iacute;nh h&atilde;ng, Mới 100%, Nguy&ecirc;n seal, Chưa Active</li>
+	<li>M&agrave;n h&igrave;nh: AMOLED, 6.5&quot;, Full HD+</li>
+	<li>Hệ điều h&agrave;nh: Android 9.0 (Pie)</li>
+	<li>Camera sau: Ch&iacute;nh 48 MP &amp; Phụ 8 MP, 2 MP, 2 MP</li>
+	<li>Camera trước: 16 MP</li>
+	<l ......</td>
+                            <td>5</td>
+                            <td>
+                                <img src="http://127.0.0.1:8000/storage/images/5obymCN6rUP8ii6RwVxvD6XC1KUpStjWKaViZdzM.png" style="width: 150px;height: 120px">
+                            </td>
+                            <td>
+                                <a class="btn btn-primary" href="http://127.0.0.1:8000/products/edit/2"><i
+                                        class="fas fa-edit"></i></a>
+                            </td>
+                            <td>
+                                <a class="btn btn-danger" href=""><i class="fas fa-trash"></i> </a>
+                            </td>
+                        </tr>
+                                                    </tbody>
+            </table>
+
+        </div>
+
+    </div>
+
+
+
+
 
 
             </div>
@@ -210,27 +297,24 @@
 </div>
 
 <!-- Bootstrap core JavaScript-->
-<script src="{{asset('vendor/jquery/jquery.min.js')}}"></script>
-<script src="{{asset('vendor/bootstrap/js/bootstrap.bundle.min.js')}}"></script>
+<script src="http://127.0.0.1:8000/vendor/jquery/jquery.min.js"></script>
+<script src="http://127.0.0.1:8000/vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
 
 <!-- Core plugin JavaScript-->
-<script src="{{asset('vendor/jquery-easing/jquery.easing.min.js')}}"></script>
+<script src="http://127.0.0.1:8000/vendor/jquery-easing/jquery.easing.min.js"></script>
 
 <!-- Custom scripts for all pages-->
-<script src="{{asset('js/sb-admin-2.min.js')}}"></script>
+<script src="http://127.0.0.1:8000/js/sb-admin-2.min.js"></script>
 
 <!-- Page level plugins -->
-<script src="{{asset('vendor/chart.js/Chart.min.js')}}"></script>
+<script src="http://127.0.0.1:8000/vendor/chart.js/Chart.min.js"></script>
 
 <!-- Page level custom scripts -->
-<script src="{{asset('js/demo/chart-area-demo.js')}}"></script>
-<script src="{{asset('js/demo/chart-pie-demo.js')}}"></script>
+<script src="http://127.0.0.1:8000/js/demo/chart-area-demo.js"></script>
+<script src="http://127.0.0.1:8000/js/demo/chart-pie-demo.js"></script>
 <script src="https://cdn.ckeditor.com/4.13.0/standard/ckeditor.js"></script>
 <script>
     CKEDITOR.replace('editor');
 </script>
 </body>
-@jquery
-@toastr_js
-@toastr_render
-</html>
+<script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script><script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/toastr.js/2.1.4/toastr.min.js"></script><script type="text/javascript">toastr.options = {"closeButton":true,"closeClass":"toast-close-button","closeDuration":300,"closeEasing":"swing","closeHtml":"<button><i class=\"icon-off\"><\/i><\/button>","closeMethod":"fadeOut","closeOnHover":true,"containerId":"toast-container","debug":false,"escapeHtml":false,"extendedTimeOut":10000,"hideDuration":1000,"hideEasing":"linear","hideMethod":"fadeOut","iconClass":"toast-info","iconClasses":{"error":"toast-error","info":"toast-info","success":"toast-success","warning":"toast-warning"},"messageClass":"toast-message","newestOnTop":false,"onHidden":null,"onShown":null,"positionClass":"toast-top-right","preventDuplicates":true,"progressBar":true,"progressClass":"toast-progress","rtl":false,"showDuration":300,"showEasing":"swing","showMethod":"fadeIn","tapToDismiss":true,"target":"body","timeOut":5000,"titleClass":"toast-title","toastClass":"toast"};</script></html>
